# flask-calculator-app

./: .flake8  DEPLOYMENT.md  Dockerfile  README.md  aws-setup.sh  pyproject.toml  run_api_tests.py  sonar-project.properties
.aws/: task-definition.json
.github/workflows/: ci-cd.yml
app/: __init__.py  calculator.py  config.py  logging_config.py  metrics.py  routes.py
tests/: test_calculator_unit.py  test_routes.py
