[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculator"
version = "1.0.0"
description = "A Flask-based calculator web application"
requires-python = ">=3.8.1"
dependencies = [
    "Flask==3.0.0",
    "gunicorn==21.2.0",
    "python-dotenv==1.0.0",
    "structlog==24.1.0",
    "requests==2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-flask==1.3.0",
    "pytest-json-report==1.5.0",
]
dev = [
    "black==23.12.1",
    "flake8==7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
per-file-ignores = [
    "tests/*:F401",
    "app/*:F401,F841"
]

[tool.hatch.build.targets.wheel]
packages = ["app"]